--- a/ref.bib
+++ b/ref.bib
@@ -9,19 +9,528 @@
   publisher={SIAM}
 }
 
-@article{Moore1990,
-	author = {Moore, James T. and Bard, Jonathan F.},
-	doi = {10.1287/opre.38.5.911},
-	issn = {0030-364X},
-	journal = {Operations Research},
-	keywords = {games: noncooperative,integer: branch-and-bound algorithms,programming},
-	mendeley-groups = {bilevel - hierarchical},
-	month = {oct},
-	number = {5},
-	pages = {911--921},
-	publisher = { INFORMS },
-	title = {{The Mixed Integer Linear Bilevel Programming Problem}},
-	url = {http://pubsonline.informs.org/doi/abs/10.1287/opre.38.5.911},
-	volume = {38},
-	year = {1990}
+@article{maas_leakyrelu_2013,
+	title = {Rectifier {Nonlinearities} {Improve} {Neural} {Network} {Acoustic} {Models}},
+	abstract = {Deep neural network acoustic models produce substantial gains in large vocabulary continuous speech recognition systems. Emerging work with rectified linear (ReL) hidden units demonstrates additional gains in final system performance relative to more commonly used sigmoidal nonlinearities. In this work, we explore the use of deep rectifier networks as acoustic models for the 300 hour Switchboard conversational speech recognition task. Using simple training procedures without pretraining, networks with rectifier nonlinearities produce 2\% absolute reductions in word error rates over their sigmoidal counterparts. We analyze hidden layer representations to quantify differences in how ReL units encode inputs as compared to sigmoidal units. Finally, we evaluate a variant of the ReL unit with a gradient more amenable to optimization in an attempt to further improve deep rectifier networks.},
+	language = {en},
+	journal = {International Conference on Machine Learning},
+	author = {Maas, Andrew L and Hannun, Awni Y and Ng, Andrew Y},
+	year = {2013},
+	pages = {6},
+	file = {Maas et al. - Rectifier Nonlinearities Improve Neural Network Aco.pdf:/Users/sabae/Zotero/storage/UMWWZ3K6/Maas et al. - Rectifier Nonlinearities Improve Neural Network Aco.pdf:application/pdf}
+}
+
+@article{vgg19,
+  author    = {Karen Simonyan and
+               Andrew Zisserman},
+  title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1409.1556},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.1556},
+  archivePrefix = {arXiv},
+  eprint    = {1409.1556},
+  timestamp = {Mon, 13 Aug 2018 16:46:51 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/SimonyanZ14a},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{resnet,
+  author    = {Kaiming He and
+               Xiangyu Zhang and
+               Shaoqing Ren and
+               Jian Sun},
+  title     = {Deep Residual Learning for Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1512.03385},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1512.03385},
+  archivePrefix = {arXiv},
+  eprint    = {1512.03385},
+  timestamp = {Mon, 13 Aug 2018 16:46:56 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/HeZRS15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{oh2004gpu,
+  title={GPU implementation of neural networks},
+  author={Oh, Kyoung-Su and Jung, Keechul},
+  journal={Pattern Recognition},
+  volume={37},
+  number={6},
+  pages={1311--1314},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{treelstm,
+  author    = {Kai Sheng Tai and
+               Richard Socher and
+               Christopher D. Manning},
+  title     = {Improved Semantic Representations From Tree-Structured Long Short-Term
+               Memory Networks},
+  journal   = {CoRR},
+  volume    = {abs/1503.00075},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1503.00075},
+  archivePrefix = {arXiv},
+  eprint    = {1503.00075},
+  timestamp = {Mon, 13 Aug 2018 16:48:20 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/TaiSM15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{graphconv,
+  author    = {Thomas N. Kipf and
+               Max Welling},
+  title     = {Semi-Supervised Classification with Graph Convolutional Networks},
+  journal   = {CoRR},
+  volume    = {abs/1609.02907},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1609.02907},
+  archivePrefix = {arXiv},
+  eprint    = {1609.02907},
+  timestamp = {Mon, 13 Aug 2018 16:48:31 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/KipfW16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{neubig2017fly,
+  title={On-the-fly operation batching in dynamic computation graphs},
+  author={Neubig, Graham and Goldberg, Yoav and Dyer, Chris},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3971--3981},
+  year={2017}
+}
+
+@article{looks2017deep,
+  title={Deep learning with dynamic computation graphs},
+  author={Looks, Moshe and Herreshoff, Marcello and Hutchins, DeLesley and Norvig, Peter},
+  journal={arXiv preprint arXiv:1702.02181},
+  year={2017}
+}
+
+@inproceedings{Allen:1983:CCD:567067.567085,
+ author = {Allen, J. R. and Kennedy, Ken and Porterfield, Carrie and Warren, Joe},
+ title = {Conversion of Control Dependence to Data Dependence},
+ booktitle = {Proceedings of the 10th ACM SIGACT-SIGPLAN Symposium on Principles of Programming Languages},
+ series = {POPL '83},
+ year = {1983},
+ isbn = {0-89791-090-7},
+ location = {Austin, Texas},
+ pages = {177--189},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/567067.567085},
+ doi = {10.1145/567067.567085},
+ acmid = {567085},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Pharr2012ispcAS,
+  title={ispc: A SPMD compiler for high-performance CPU programming},
+  author={Matt Pharr and William R. Mark},
+  journal={2012 Innovative Parallel Computing (InPar)},
+  year={2012},
+  pages={1-13}
+}
+
+@phdthesis{Saba2018,
+    title    = {Techniques for Cough Sound Analysis},
+    school   = {University of Washington},
+    author   = {Saba, Elliot},
+    year     = {2018},
+    url      = {https://staticfloat.github.io/papers/ElliotSaba_Dissertation.pdf}
+}
+
+@misc{innes2018machine,
+  title={On Machine Learning and Programming Languages},
+  author={Innes, Mike and Karpinski, Stefan and Shah, Viral and Barber, David and Stenetorp, Pontus and Besard, Tim and Bradbury, James and Churavy, Valentin and Danisch, Simon and Edelman, Alan and others},
+  year={2018},
+  url={https://julialang.org/blog/2017/12/ml&pl}
+}
+
+@article{bezanson2017julia,
+  title={Julia: A fresh approach to numerical computing},
+  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+  journal={SIAM review},
+  volume={59},
+  number={1},
+  pages={65--98},
+  year={2017},
+  publisher={SIAM}
+}
+
+@incollection{GANs,
+title = {Generative Adversarial Nets},
+author = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+booktitle = {Advances in Neural Information Processing Systems 27},
+editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+pages = {2672--2680},
+year = {2014},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
+}
+
+@article{dunning2017jump,
+  title={JuMP: A modeling language for mathematical optimization},
+  author={Dunning, Iain and Huchette, Joey and Lubin, Miles},
+  journal={SIAM Review},
+  volume={59},
+  number={2},
+  pages={295--320},
+  year={2017},
+  publisher={SIAM}
+}
+
+@article{rackauckas2017differentialequations,
+  title={Differentialequations. jl--a performant and feature-rich ecosystem for solving differential equations in Julia},
+  author={Rackauckas, Christopher and Nie, Qing},
+  journal={Journal of Open Research Software},
+  volume={5},
+  number={1},
+  year={2017},
+  publisher={Ubiquity Press}
+}
+
+@inproceedings{turing18,
+  title={{T}uring: a language for flexible probabilistic inference},
+  author={Ge, Hong and Xu, Kai and Ghahramani, Zoubin},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={1682--1690},
+  year={2018}
+}
+
+@article{AlphaGoZero,
+  title={Mastering the game of Go without human knowledge},
+  author={Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
+  journal={Nature},
+  volume={550},
+  number={7676},
+  pages={354},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@misc{AlphaGo.jl,
+  author = {Tejan Karmali},
+  title = {AlphaGo.jl: Alpha Go Zero implementation in Flux.jl},
+  year = 2018,
+  url = {https://github.com/tejank10/AlphaGo.jl},
+  urldate = {2018-09-26}
+}
+
+@misc{Images.jl,
+  author = {Tim Holy and Contributors},
+  title = {Images.jl: An image library for Julia},
+  year = 2016,
+  url = {https://github.com/JuliaImages/Images.jl},
+  urldate = {2018-09-26}
+}
+
+@misc{CuArrays.jl,
+  author = {Mike Innes, Tim Besard and Contributors},
+  title = {CuArrays.jl: A Curious Cumulation of CUDA Cuisine},
+  year = 2018,
+  url = {https://github.com/JuliaGPU/CuArrays.jl},
+  urldate = {2018-09-26}
+}
+
+@article{besard2017effective,
+  title={Effective Extensible Programming: Unleashing Julia on GPUs},
+  author={Besard, Tim and Foket, Christophe and De Sutter, Bjorn},
+  journal={arXiv preprint arXiv:1712.03112},
+  year={2017}
+}
+
+@misc{innesGPU,
+  author = {Michael J Innes},
+  title = {Generic GPU Kernels},
+  year = 2017,
+  url = {http://mikeinnes.github.io/2017/08/24/cudanative.html},
+  urldate = {2018-09-26}
+}
+
+@article{revels2016forward,
+  title={Forward-mode automatic differentiation in Julia},
+  author={Revels, Jarrett and Lubin, Miles and Papamarkou, Theodore},
+  journal={arXiv preprint arXiv:1607.07892},
+  year={2016}
+}
+
+@techreport{speelpenning1980compiling,
+  title={Compiling fast partial derivatives of functions given by algorithms},
+  author={Speelpenning, Bert},
+  year={1980},
+  institution={Illinois Univ., Urbana (USA). Dept. of Computer Science}
+}
+
+@misc{PyTorch1,
+  title = {The Road to 1.0: production ready {PyTorch}},
+  author={{PyTorch Team}},
+  year={2018},
+  howpublished={\url{https://pytorch.org/blog/a-year-in/}},
+  note = {Accessed: 2018-09-22}
+}
+
+@inproceedings{bergstra2011theano,
+  title={Theano: Deep learning on gpus with python},
+  author={Bergstra, James and Bastien, Fr{\'e}d{\'e}ric and Breuleux, Olivier and Lamblin, Pascal and Pascanu, Razvan and Delalleau, Olivier and Desjardins, Guillaume and Warde-Farley, David and Goodfellow, Ian and Bergeron, Arnaud and others},
+  booktitle={NIPS 2011, BigLearning Workshop, Granada, Spain},
+  volume={3},
+  pages={1--48},
+  year={2011},
+  organization={Citeseer}
+}
+
+@inproceedings{maclaurin2015autograd,
+  title={Autograd: Effortless gradients in numpy},
+  author={Maclaurin, Dougal and Duvenaud, David and Adams, Ryan P},
+  booktitle={ICML 2015 AutoML Workshop},
+  year={2015}
+}
+
+@article{neubig2017dynet,
+  title={Dynet: The dynamic neural network toolkit},
+  author={Neubig, Graham and Dyer, Chris and Goldberg, Yoav and Matthews, Austin and Ammar, Waleed and Anastasopoulos, Antonios and Ballesteros, Miguel and Chiang, David and Clothiaux, Daniel and Cohn, Trevor and others},
+  journal={arXiv preprint arXiv:1701.03980},
+  year={2017}
+}
+
+@inproceedings{lattner2004llvm,
+  title={{LLVM}: A compilation framework for lifelong program analysis \& transformation},
+  author={Lattner, Chris and Adve, Vikram},
+  booktitle={Proceedings of the international symposium on Code generation and optimization: feedback-directed and runtime optimization},
+  pages={75},
+  year={2004},
+  organization={IEEE Computer Society}
+}
+
+@article{pearlmutter2008reverse,
+  title={Reverse-mode AD in a functional framework: Lambda the ultimate backpropagator},
+  author={Pearlmutter, Barak A and Siskind, Jeffrey Mark},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={30},
+  number={2},
+  pages={7},
+  year={2008},
+  publisher={ACM}
+}
+
+@inproceedings{abadi2016tensorflow,
+  title={Tensorflow: a system for large-scale machine learning.},
+  author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
+  booktitle={OSDI},
+  volume={16},
+  pages={265--283},
+  year={2016}
+}
+
+@book{blelloch1990vector,
+  title={Vector models for data-parallel computing},
+  author={Blelloch, Guy E},
+  volume={75},
+  year={1990},
+  publisher={MIT press Cambridge}
+}
+
+@article{hack2011whole,
+  title={Whole-Function Vectorization},
+  author={Hack, Ralf Karrenberg Sebastian and Wilhelm, Reinhard and Neumann, Sandra and Spurk, Reinhard and Doerfert, Johannes and Jacobs, Michael and Jung, Tina and Moll, Simon and Ritter, Fabian and Lei{\ss}a, Roland and others},
+  year={2011}
+}
+
+@misc{FluxJS.jl,
+  author = {Mike Innes},
+  title = {FluxJS.jl: Flux to javascript compiler},
+  year = 2018,
+  url = {https://github.com/FluxML/FluxJS.jl},
+  urldate = {2018-09-27}
+}
+
+@misc{DataFlow.jl,
+  author = {Mike Innes},
+  title = {DataFlow.jl: Code Intermediate Representation Format},
+  year = 2016,
+  url = {https://github.com/MikeInnes/DataFlow.jl},
+  urldate = {2018-09-27}
+}
+
+@misc{tensorflow.js,
+  author = {Tensorflow Team},
+  title = {Introducing Tensorflow.js: Machine Learning in Javascript},
+  year = 2018,
+  url = {https://medium.com/tensorflow/introducing-tensorflow-js-machine-learning-in-javascript-bf3eab376db},
+  urldate = {2018-09-27}
+}
+
+@article{bartholomew2000automatic,
+  title={Automatic differentiation of algorithms},
+  author={Bartholomew-Biggs, Michael and Brown, Steven and Christianson, Bruce and Dixon, Laurence},
+  journal={Journal of Computational and Applied Mathematics},
+  volume={124},
+  number={1-2},
+  pages={171--190},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@inproceedings{gravesctc,
+  title={Connectionist temporal classification: labelling unsegmented sequence data with recurrent neural networks},
+  author={Graves, Alex and Fern{\'a}ndez, Santiago and Gomez, Faustino and Schmidhuber, J{\"u}rgen},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={369--376},
+  year={2006},
+  organization={ACM}
+}
+
+@misc{kelleygsoc,
+  author = {Matthew C. Kelley},
+  title = {gsoc2018},
+  year = {2018},
+  url = {https://github.com/maetshju/gsoc2018}
+}
+
+@misc{warpctc,
+  author = {{Baidu Research}},
+  title = {warp-ctc},
+  year = {2018},
+  url = {https://github.com/baidu-research/warp-ctc}
+}
+
+@inproceedings{Huai14,
+ author = {Huai, Yin and Chauhan, Ashutosh and Gates, Alan and Hagleitner, Gunther and Hanson, Eric N. and O'Malley, Owen and Pandey, Jitendra and Yuan, Yuan and Lee, Rubao and Zhang, Xiaodong},
+ title = {Major Technical Advancements in Apache Hive},
+ booktitle = {Proceedings of the 2014 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '14},
+ year = {2014},
+ isbn = {978-1-4503-2376-5},
+ location = {Snowbird, Utah, USA},
+ pages = {1235--1246},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2588555.2595630},
+ doi = {10.1145/2588555.2595630},
+ acmid = {2595630},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data warehouse, databases, hadoop, hive, mapreduce},
+}
+
+@inproceedings{Pavlo09,
+ author = {Pavlo, Andrew and Paulson, Erik and Rasin, Alexander and Abadi, Daniel J. and DeWitt, David J. and Madden, Samuel and Stonebraker, Michael},
+ title = {A Comparison of Approaches to Large-scale Data Analysis},
+ booktitle = {Proceedings of the 2009 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '09},
+ year = {2009},
+ isbn = {978-1-60558-551-2},
+ location = {Providence, Rhode Island, USA},
+ pages = {165--178},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1559845.1559865},
+ doi = {10.1145/1559845.1559865},
+ acmid = {1559865},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {benchmarks, mapreduce, parallel database},
+}
+
+@InProceedings{ mckinney-proc-scipy-2010,
+  author    = { Wes McKinney },
+  title     = { Data Structures for Statistical Computing in Python },
+  booktitle = { Proceedings of the 9th Python in Science Conference },
+  pages     = { 51 - 56 },
+  year      = { 2010 },
+  editor    = { St\'efan van der Walt and Jarrod Millman }
+}
+
+  @Manual{ dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2018},
+    note = {R package version 0.7.8},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
+
+  @article{spark,
+ author = {Zaharia, Matei and Xin, Reynold S. and Wendell, Patrick and Das, Tathagata and Armbrust, Michael and Dave, Ankur and Meng, Xiangrui and Rosen, Josh and Venkataraman, Shivaram and Franklin, Michael J. and Ghodsi, Ali and Gonzalez, Joseph and Shenker, Scott and Stoica, Ion},
+ title = {Apache Spark: A Unified Engine for Big Data Processing},
+ journal = {Commun. ACM},
+ issue_date = {November 2016},
+ volume = {59},
+ number = {11},
+ month = oct,
+ year = {2016},
+ issn = {0001-0782},
+ pages = {56--65},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2934664},
+ doi = {10.1145/2934664},
+ acmid = {2934664},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{scidb,
+ author = {Stonebraker, Michael and Brown, Paul and Becla, Jacek and Zhang, Donghui},
+ title = {SciDB: A Database Management System for Applications with Complex Analytics},
+ journal = {Computing in Science and Engg.},
+ issue_date = {May 2013},
+ volume = {15},
+ number = {3},
+ month = may,
+ year = {2013},
+ issn = {1521-9615},
+ pages = {54--62},
+ numpages = {9},
+ url = {http://dx.doi.org/10.1109/MCSE.2013.19},
+ doi = {10.1109/MCSE.2013.19},
+ acmid = {2546735},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+ keywords = {Arrays,Data models,Parallel processing,File systems,Database languages,Analytical models,Large Hadron Collider,scientific computing,scientific databases,array databases,complex analytics,parallel databases,large-scale matrix operations},
+} 
+
+@article{day2018online,
+  title={Online Algorithms for Statistics.},
+  author={Josh Day},
+  year={2018}
+}
+
+@article{flux,
+  title={Fashionable Modelling with Flux},
+  author={Innes, Michael and Saba, Elliot and Fischer, Keno and Gandhi, Dhairya and Rudilosso, Marco Concetto and Joy, Neethu Mariya and Karmali, Tejan and Singh, Avik Pal and Shah, Viral},
+  journal={arXiv preprint arXiv:1811.01457},
+  year={2018}
+}
+
+@inproceedings{abadi08,
+ author = {Abadi, Daniel J. and Madden, Samuel R. and Hachem, Nabil},
+ title = {Column-stores vs. Row-stores: How Different Are They Really?},
+ booktitle = {Proceedings of the 2008 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '08},
+ year = {2008},
+ isbn = {978-1-60558-102-6},
+ location = {Vancouver, Canada},
+ pages = {967--980},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1376616.1376712},
+ doi = {10.1145/1376616.1376712},
+ acmid = {1376712},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {c-store, column-oriented dbms, column-store, compression, invisible join, tuple materialization, tuple reconstruction},
+} 
+
+%%% contains utf-8, see: https://inspirehep.net/info/faq/general#utf8
+%%% add \usepackage[utf8]{inputenc} to your latex preamble
+
+@article{giordano2016,
+      author         = "Giordano, Mosè",
+      title          = "{Uncertainty propagation with functionally correlated
+                        quantities}",
+      year           = "2016",
+      eprint         = "1610.08716",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.data-an",
+      SLACcitation   = "%%CITATION = ARXIV:1610.08716;%%"
 }
