Updates from Overleaf

--- a/paper.tex
+++ b/paper.tex
@@ -53,7 +53,7 @@ the database implementer greatly.
 \section{Case study: manipulating measurements}
 \label{sec:measurements}
 
-Using the Measurements.jl ~\cite{giordano2016} package to represent physical measurements with some uncertainty. JuliaDB is unaware of the Measurement datatype, yet it can store measurements, read and write to disk and perform any database operation while using the math defined on the measurement type. In a two-language system, a performant implementation of the measurement datastructure must be done in a low-level language like C. For performant queries on databases containing measurements, one will have to implement an array of measurements datastructure in the low-level language as well. And tediously enumerate all possible array operations. But with JuliaDB and Julia, simply defining the measurement types and the primitive operations on Measurements is enough to achieve all the said features. Measurements can be stored efficiently in Julia arrays, operations such as `mean` and `sum` or broadcast on arrays of measurements fall out their existing generic implementations due to Julia's dynamic multiple-dispatch based JIT compiler.
+Using the Measurements.jl ~\cite{giordano2016} package to represent physical measurements with some uncertainty. JuliaDB is unaware of the Measurement datatype, yet it can store measurements, read and write to disk, and perform any database operation while using the math defined on the measurement type. In a two-language system, a performant implementation of the measurement datastructure must be done in a low-level language like C. For performant queries on columns containing measurements, one will have to implement an array of measurements datastructure in the low-level language as well that supports many array operations. But with JuliaDB and Julia, simply defining the measurement types and the primitive operations on Measurements is enough to achieve all the said features. Measurements can be stored efficiently in Julia arrays, operations such as `mean` and `sum` or broadcast on arrays of measurements fall out their existing generic implementations due to Julia's dynamic multiple-dispatch based JIT compiler.
 
 Measurements.jl implements the ± operator
 which represents an observation with some uncertainty associated
