--- a/ref.bib
+++ b/ref.bib
@@ -524,13 +524,17 @@ url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
 %%% contains utf-8, see: https://inspirehep.net/info/faq/general#utf8
 %%% add \usepackage[utf8]{inputenc} to your latex preamble
 
-@article{giordano2016,
-      author         = "Giordano, Mosè",
-      title          = "{Uncertainty propagation with functionally correlated
-                        quantities}",
-      year           = "2016",
-      eprint         = "1610.08716",
-      archivePrefix  = "arXiv",
-      primaryClass   = "physics.data-an",
-      SLACcitation   = "%%CITATION = ARXIV:1610.08716;%%"
+@ARTICLE{giordano2016,
+  author =	 {{Giordano}, Mos{\`e}},
+  title =	 "{Uncertainty propagation with functionally correlated
+                  quantities}",
+  journal =	 {ArXiv e-prints},
+  archivePrefix ="arXiv",
+  eprint =	 {1610.08716},
+  primaryClass = "physics.data-an",
+  keywords =	 {Physics - Data Analysis, Statistics and Probability},
+  year =	 2016,
+  month =	 oct,
+  adsurl =	 {https://ui.adsabs.harvard.edu/abs/2016arXiv161008716G},
+  adsnote =	 {Provided by the SAO/NASA Astrophysics Data System}
 }
