--- a/paper.tex
+++ b/paper.tex
@@ -53,11 +53,24 @@ We take up a prototypical illustration of the power of JuliaDB by using a custom
 
 Measurements.jl implements the ± operator which represents an observation with some uncertainty associated with it. Numeric operations on measuements propagate the uncertainty as prescribed by linear error propagation theory: For a function application $G(a,b,c...)$ where arguments are measurements $a=\overline{a} \pm \sigma_{a}, b=\overline{b} \pm \sigma_{b}, c=\overline{c} \pm \sigma_{c}$ the error of the output is found using the relationship: 
 
-\begin{equation}
-$$\sigma_{G}^{2}=\left(\left.\frac{\partial G}{\partial a}\right|_{a=\overline{a}} \sigma_{a}\right)^{2}+\left(\left.\frac{\partial G}{\partial b}\right|_{b=\overline{b}} \sigma_{b}\right)^{2}+\left(\left.\frac{\partial G}{\partial c}\right|_{c=\overline{c}} \sigma_{c}\right)^{2}+\cdots \\
-+2\left(\frac{\partial G}{\partial a}\right)_{a=\overline{a}}\left(\frac{\partial G}{\partial b}\right)_{b=\overline{b}} \sigma_{a b}+2\left(\frac{\partial G}{\partial a}\right)_{a=\overline{a}}\left(\frac{\partial G}{\partial c}\right)_{c=\overline{c}} \sigma_{a c} \\ +2\left(\frac{\partial G}{\partial b}\right)_{b=\overline{b}}\left(\frac{\partial G}{\partial c}\right)_{c=\overline{c}} \sigma_{b c}+\cdots$$
-
+$$\begin{equation}
+  \begin{split}
+    \sigma_G^2 &= \left( \left.\frac{\partial G}{\partial a}\right\vert_{a =
+        \bar{a}} \sigma_a \right)^2 + \left( \left.\frac{\partial G}{\partial
+          b}\right\vert_{b = \bar{b}} \sigma_b \right)^2 + \left(
+      \left.\frac{\partial G}{\partial c}\right\vert_{c = \bar{c}} \sigma_c
+    \right)^2 + \cdots \\
+    &\quad{}+ 2 \left(\frac{\partial G}{\partial a}\right)_{a = \bar{a}}
+    \left(\frac{\partial G}{\partial b}\right)_{b = \bar{b}} \sigma_{ab} + 2
+    \left(\frac{\partial G}{\partial a}\right)_{a = \bar{a}}
+    \left(\frac{\partial G}{\partial c}\right)_{c = \bar{c}}
+    \sigma_{ac} \\
+    &\quad{}+ 2 \left(\frac{\partial G}{\partial b}\right)_{b = \bar{b}}
+    \left(\frac{\partial G}{\partial c}\right)_{c = \bar{c}} \sigma_{bc} +
+    \cdots
+  \end{split}
 \end{equation}
+$$
 
 
 Where and $E[x]$ is the expected value of $x$.
@@ -68,16 +81,71 @@ would involve having to write e.g. a mean function for an array
 of measurements in C; in Julia, it emerges from dynamic
 multiple dispatch, and compiles to C-like code.
 
-Unlike a typical non-Julia analytical databases, without any
+Unlike a typical non-Julia analytical database, without any
 first class support for Measurements,
 Pure-julia analytical database
 We can store measurements directly in a JuliaDB table.
 
+\begin{lstlisting}[language=Julia]
+# generate some fake measurements time-series:
+using JuliaDB, Measurements, Dates, Random
+Random.seed!(1234)
+
+n = 100000
+timestamps = sort(DateTime.(now() .- Millisecond.(rand(1:10^6, n))))
+x = cumsum(randn(n)) .± rand(n)./10
+
+#=
+Table with 100000 rows, 2 columns:
+time                     x
+────────────────────────────────────────
+2019-08-29T01:52:44.148  -1.222±0.086
+2019-08-29T01:52:44.178  -0.007±0.02
+2019-08-29T01:52:44.201  0.801±0.053
+...
+=#
+\end{lstlisting}
+
 Perform groupby-mean without implementing the
 mean function for an array of measurements in C.
 
-Use OnlineStats for stats on measurements for lesser
-allocation and parallelism.
+\begin{lstlisting}[language=Julia]
+minutely = groupby(mean, observations,
+                  :time => t->trunc(t, Minute), select=:x)
+
+#=
+Table with 18 rows, 2 columns:
+time                 mean
+─────────────────────────────────────
+2019-08-29T01:52:00  28.1203±0.0015
+2019-08-29T01:53:00  59.9434±0.00075
+2019-08-29T01:54:00  4.21493±0.00075
+...
+=#
+\end{lstlisting}
+
+Use OnlineStats for stats on measurements for lesser allocation and parallelism.
+
+\begin{lstlisting}
+# assuming session was started with many julia workers
+
+using OnlineStats
+
+d_observations = distribute(observations, 8) # distribute into 8 parts, equally split between available julia processes
+d_minutely = groupreduce(Mean(Measurement{Float64}), d_observations,
+                         :time => t->trunc(t, Minute), select=:x)
+
+
+#=
+Distributed Table with 18 rows in 1 chunks:
+time                 mean
+─────────────────────────────────────
+2019-08-29T01:52:00  Mean: n=1577 | value=28.1203±0.0015
+2019-08-29T01:53:00  Mean: n=5989 | value=59.9434±0.00075
+2019-08-29T01:54:00  Mean: n=5883 | value=4.21493±0.00075
+...
+=#
+\end{lstlisting}
 
 The Measurement type in the Measurements.jl ~\cite{giordano2016} package represents physical measurements with some uncertainty. JuliaDB is unaware of the Measurement datatype, yet it can store, read and write to disk, and perform any database operation while using the math defined on the measurement type. In a two-language system, a performant implementation of the measurement datastructure must be done in a low-level language like C. For reasonable performance on queries on columns containing measurements, one may have to implement an array of measurements datastructure in the low-level language as well that supports many array operations. But with JuliaDB and Julia, simply defining the measurement type and the primitive operations on Measurements is enough to achieve all the said features. Measurements can be stored efficiently in Julia arrays, operations such as `mean` and `sum` or broadcast on arrays of measurements fall out their existing generic implementations due to Julia's dynamic multiple-dispatch based JIT compiler.
 
