"generate" header.tex by hand

--- a/header.tex
+++ b/header.tex
@@ -1,12 +1,15 @@
 % **************GENERATED FILE, DO NOT EDIT**************
+\title{JuliaDB: addressing the two-language problem in analytical databases}
 
-\title{My JuliaCon proceeding}
+\author[1, 2]{Shashi Gowda}
+\author[2]{Jeff Bezanson}
+\author[2]{Josh Day}
+\author[2]{Stefan Karpinski}
+\author[2]{Viral B. Shah}
+\author[3]{Pietro Vertechi}
+\affil[1]{Massachusetts Institute of Technology}
+\affil[2]{Julia Computing Inc.}
+\affil[3]{Champalimaud Centre for the Unknown}
 
-\author[1]{1st author}
-\author[1, 2]{2nd author}
-\author[2]{3rd author}
-\affil[1]{University}
-\affil[2]{National Lab}
-
-\keywords{Julia, Optimization, Game theory, Compiler}
+\keywords{Julia, Databases, Analytics, Generic Programming}
 
