--- a/paper.tex
+++ b/paper.tex
@@ -3,6 +3,11 @@
 \documentclass{juliacon}
 \setcounter{page}{1}
 
+\lstset{literate=
+{─}{{\ucc{$--$}}}{1}
+{±}{{\ucc{$\pm$}}}{1}
+}
+
 \begin{document}
 
 \input{header}
