start application section

--- a/header.tex
+++ b/header.tex
@@ -8,7 +8,7 @@
 \author[2]{Viral B. Shah}
 \author[3]{Pietro Vertechi}
 \affil[1]{Massachusetts Institute of Technology}
-\affil[2]{Julia Computing Inc.}
+\affil[2]{Julia Computing}
 \affil[3]{Champalimaud Centre for the Unknown}
 
 \keywords{Julia, Databases, Analytics, Generic Programming}
