--- a/paper.tex
+++ b/paper.tex
@@ -283,6 +283,10 @@ with a UDF, with pandas taking the biggest hit (Figure~\ref{fig:nyctaxiquery}).
 \label{fig:nyctaxiquery} 
 \end{figure}
 
+\section{Applications}
+
+We breifly mention some applications of JuliaDB in the real-world. Julia Computing is using JuliaDB as a time-series database~\cite{wilmott2018} for large datasets.
+
 \section{Future directions}
 
 1. AxisArrays
