--- a/ref.bib
+++ b/ref.bib
@@ -538,3 +538,18 @@ url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
   adsurl =	 {https://ui.adsabs.harvard.edu/abs/2016arXiv161008716G},
   adsnote =	 {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@article{wilmott2018,
+author = {Day, Josh},
+title = {Big Time Series Analysis with JuliaDB},
+journal = {Wilmott},
+volume = {2018},
+number = {95},
+pages = {10-13},
+doi = {10.1002/wilm.10668},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/wilm.10668},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/wilm.10668},
+abstract = {Dr. Josh Day of Julia Computing takes a look into the multi-indexed database of the future.},
+year = {2018}
+}
