--- a/header.tex
+++ b/header.tex
@@ -7,6 +7,7 @@
 \author[2]{Stefan Karpinski}
 \author[2]{Viral B. Shah}
 \author[3]{Pietro Vertechi}
+\author[1]{Alan Edelman}
 \affil[1]{Massachusetts Institute of Technology}
 \affil[2]{Julia Computing Inc.}
 \affil[3]{Champalimaud Centre for the Unknown}
